src/assets/templates/sh/network-policy-strict.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: xxxaaa-network-policy
  namespace: xxxaaa
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  # only allow same namespace inbound pod communications, DNS queries, and ingress Internet traffic
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      - podSelector:
          matchLabels:
            app: xxxaaa
  # only allow same namespace outbound pod communications, DNS queries, and outbound Internet traffic
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
      - protocol: TCP
        port: 80
        endPort: 10000
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: "kube-system"
      - podSelector:
          matchLabels:
            k8s-app: "kube-dns"
      - podSelector:
          matchLabels:
            app: xxxaaa
      - podSelector:
          matchLabels:
            network: allow
